Many many bug fixes and better style choices for navbar and scrollbar

--- a/NEW/style.css
+++ b/NEW/style.css
@@ -1,83 +1,97 @@
 body {
-    text-align: center;
-    font-family: Arial, sans-serif;
-    padding-left: calc(100vw - 100%);
-    --fg: white;
-    --bg: black;
-    color: var(--fg);
-    background-color: var(--bg);
-    .navbar a:hover{color: #950f8e};
+  text-align: center;
+  font-family: Arial, sans-serif;
+  padding-left: calc(100vw - 100%);
+  --fg: white;
+  --bg: black;
+  color: var(--fg);
+  background-color: var(--bg);
+  .navbar a:hover{color: #472246};
 }
 h1 {
-    margin-top: 69px;
+  margin-top: 69px;
 }
-.navbar{
-    top: 0%;
-    left: 42%;
-    position: fixed;
-    background-color: #4CD964;
-
+.navbar {
+  top: 0%;
+  left: 35%;
+  right: 35%;
+  position: fixed;
+  background-color: #4CD964;
+  border-radius: 30px;
 }
 a {
-    font-size: 40px;
-    color: var(--fg);
-    text-decoration: none;
+  font-size: 40px;
+  color: var(--fg);
+  text-decoration: none;
+}
+.contact {
+  font-size: 20px;
+  text-decoration: underline;
+}
+svg {
+  vertical-align: middle;
+}
+svg:hover {
+  fill: #472246;
 }
 ::-webkit-scrollbar {
-    width: 8px;
-    height: 10px;
-  }
-  ::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    background: grey;
-  }
+  width: 8px;
+  height: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: #525252;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: darkgray;
+}
 body:has(#dark:checked) {
-    --fg: black;
-    --bg: white;
+  --fg: black;
+  --bg: white;
 }
 .toggle {
-    vertical-align: middle;
-    appearance: none;
-    position: relative;
-    display: inline-block;
-    box-sizing: content-box;
-    width: 4.5em;
-    height: 2em;
-    padding: 0.2em;
-    border: none;
-    cursor: pointer;
-    border-radius: 1.5em;
-    overflow: hidden;
-    background-color: #707070;
-    transition: background ease 0.3s;
-  }
-  
-  .toggle:before {
-    content: "on off";
-    display: block;
-    position: absolute;
-    z-index: 2;
-    width: 2em;
-    height: 2em;
-    font-family: system-ui;
-    font-size: 1em;
-    line-height: 2em;
-    font-weight: 500;
-    text-transform: uppercase;
-    text-indent: -2em;
-    word-spacing: 2.55em;
-    text-shadow: -1px -1px rgba(0,0,0,0.15);
-    white-space: nowrap;
-    background: #fff;
-    color: #fff;
-    border-radius: 1.5em;
-    transition: transform cubic-bezier(0.3, 1.5, 0.7, 1) 0.3s;
-  }
-  
-  .toggle:checked {
-    background-color: #4CD964;
-  }
-  
-  .toggle:checked:before {
-    transform: translateX(2.5em);
-  }
+  vertical-align: middle;
+  appearance: none;
+  position: relative;
+  display: inline-block;
+  box-sizing: content-box;
+  width: 4.5em;
+  height: 2em;
+  padding: 0.2em;
+  border: none;
+  cursor: pointer;
+  border-radius: 1.5em;
+  overflow: hidden;
+  background-color: #707070;
+  transition: background ease 0.3s;
+}
+
+.toggle:before {
+  content: "on off";
+  display: block;
+  position: absolute;
+  z-index: 2;
+  width: 2em;
+  height: 2em;
+  font-family: system-ui;
+  font-size: 1em;
+  line-height: 2em;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-indent: -2em;
+  word-spacing: 2.55em;
+  text-shadow: -1px -1px rgba(0,0,0,0.15);
+  white-space: nowrap;
+  background: #fff;
+  color: #fff;
+  border-radius: 1.5em;
+  transition: transform cubic-bezier(0.3, 1.5, 0.7, 1) 0.3s;
+}
+
+.toggle:checked {
+  background-color: #4CD964;
+}
+
+.toggle:checked:before {
+  transform: translateX(2.5em);
+}
